fix with reservation